--- a/algorithm/block/Makefile_trash
+++ b/algorithm/block/Makefile_trash
@@ -1,3 +1,11 @@
+CC=gcc
+
+CFLAGS +=\
+		 -g\
+		 -std=c99\
+		 -Wno-discarded-qualifiers\
+
+
 SRCS +=\
 	   block.c\
 
@@ -5,19 +13,20 @@ OBJS :=\
 	$(patsubst %.c,%.o,$(SRCS))\
 
 TARGETOBJ:=\
-	$(addprefix ../../object/,$(OBJS))\
+	$(addprefix ../../object/,$(OBJS))
+	#$(OBJS)\
 
-LEAK: all
+
 all: $(TARGETOBJ) 
 
 libnom.a : $(TARGETOBJ)
 	$(AR) r $(@) $(TARGETOBJ)
 
 .c.o :
-	$(CC) $(CFLAGS_ALGO) -c $< -o $@
+	$(CC) $(CFLAGS) -c $< -o $@
 
 ../../object/%.o: %.c
-	$(CC) $(CFLAGS_ALGO) -c $< -o $@
+	$(CC) $(CFLAGS) -c $< -o $@
 
 clean : 
 	@$(RM) libnom.a
