--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "xstring": "c",
-        "xutility": "c"
+        "xutility": "c",
+        "iosfwd": "c"
     }
 }
