Integrate BM with block_ftl, very roughly

--- a/algorithm/block/Makefile
+++ b/algorithm/block/Makefile
@@ -1,5 +1,10 @@
+CC = g++
+
 SRCS +=\
-	   block.c\
+		block_withBM.c\
+		BM_Block.c\
+		BM_Heap.c\
+		BM_Interface.c\
 
 OBJS :=\
 	$(patsubst %.c,%.o,$(SRCS))\
