Fix validate/invalidate error in BM API, (uint64_t)1 << offset

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,14 @@
 *.o
 *.a
+
+blockmanager/libbm.a
+blockmanager/memset.c
+blockmanager/test.c
+blockmanager/bm
+blockmanager/comp.sh
+blockmanager/*.o
+blockmanager/*.a
+
 simulator
 simulator_memory_check
 data/
