--- a/algorithm/log_gecko/Makefile
+++ b/algorithm/log_gecko/Makefile
@@ -1,3 +1,15 @@
-
-skip: skiplist.h skiplist.c
-	gcc -g -o skip.o skiplist.c	-std=c99
+CC = gcc
+INCLUDE = ./header
+CFLAGS = -g -std=c99 -I$(INCLUDE)
+SRCS = $(wildcard *.c)
+OBJS = $(SRCS:.c=.o)
+TARGET = test
+ 
+all : $(TARGET)
+	$(CC) $(CFLAGS) -o $(TARGET) $(OBJS)
+ 
+$(TARGET) :
+	$(CC) $(CFLAGS) -c $(SRCS)
+ 
+clean :
+	rm -f $(TARGET) *.o
