revert to Manager_free algorithm.

--- a/algorithm/page/Makefile
+++ b/algorithm/page/Makefile
@@ -1,10 +1,5 @@
 SRCS +=\
-	   BM_Block.c\
-	   BM_Heap.c\
-	   BM_Interface.c\
-	   PM_blockqueue.c\
-	   PM_operation.c\
-	   page_PM.c\
+	   page_revised.c\
 
 OBJS :=\
 	$(patsubst %.c,%.o,$(SRCS))\
