Protype for fast_MergeRWLogBlock function
TODO : Bix bug for double free problem

--- a/algorithm/Hybrid/Makefile
+++ b/algorithm/Hybrid/Makefile
@@ -17,8 +17,8 @@ SRCS +=\
 		fast_SwitchSWLogBlock.c\
 		fast_MergeSWLogBlock.c\
 		fast_MergeRWLogBlock.c\
-		assign_pseudo_req.c\
-
+		fast_UpdateRWLogBlockState.c\
+		fast_FullMerge.c\
 
 OBJS :=\
 	$(patsubst %.c,%.o,$(SRCS))\
