--- a/algorithm/log_gecko/Makefile
+++ b/algorithm/log_gecko/Makefile
@@ -1,14 +1,15 @@
 CC = gcc
 CFLAGS = -g -std=c99
+LDFLAGS = -lm
 SRCS = $(wildcard *.c)
 OBJS = $(SRCS:.c=.o)
 TARGET = test
  
 all : $(TARGET)
-	$(CC) $(CFLAGS) -o $(TARGET) $(OBJS)
+	$(CC) $(CFLAGS) -o $(TARGET) $(OBJS) $(LDFLAGS)
  
 $(TARGET) :
-	$(CC) $(CFLAGS) -c $(SRCS)
+	$(CC) $(CFLAGS) -c $(SRCS) $(LDFLAGS)
  
 clean :
 	rm -f $(TARGET) *.o
