--- a/algorithm/pftl/Makefile
+++ b/algorithm/pftl/Makefile
@@ -1,7 +1,7 @@
 SRCS +=\
-	   page.c\
-	   page_utils.c\
-	   page_gc.c\
+	   pftl.c\
+	   pftl_utils.c\
+	   pftl_gc.c\
 
 OBJS :=\
 	$(patsubst %.c,%.o,$(SRCS))\
