--- a/algorithm/blockmanager/Makefile_test
+++ b/algorithm/blockmanager/Makefile_test
@@ -1,5 +1,5 @@
-test : BM_Main.o BM_Block.o BM_Heap.o
-		gcc -o test BM_Main.o BM_Block.o BM_Heap.o
+test : BM_Main.o BM_Block.o BM_Heap.o BM_Interface.o
+		gcc -o test BM_Main.o BM_Block.o BM_Heap.o BM_Interface.o
 
 BM_Main.o : BM_Main.c
 		gcc -DSLC -c BM_Main.c
@@ -9,6 +9,9 @@ BM_Block.o : BM_Block.c
 
 BM_Heap.o : BM_Heap.c
 		gcc -c  BM_Heap.c
+
+BM_Interface.o : BM_Interface.c
+		gcc -c BM_Interface.c
 
 clean :
 		rm -rf *.o
