add merge sort multi thread

--- a/algorithm/Lsmtree/Makefile
+++ b/algorithm/Lsmtree/Makefile
@@ -21,6 +21,7 @@ SRCS +=\
 	   skiplist.c\
 	   bloomfilter.c\
 	   lsmtree.c\
+	   merge_compaction.c\
 	   compaction.c\
 	   page.c\
 	   heap.c\
