bulk_write mode added W_BULK=1 indicates bulk write mode lba size bug fixed (page to sector translation now supported) spdk_lower_alloc minor fix

--- a/lower/spdk/Makefile
+++ b/lower/spdk/Makefile
@@ -32,7 +32,7 @@ all: $(TARGETOBJ) #libspdk.a
 	$(CC) $(CFLAGS_LOWER) $(TARGET_CC) -c $< -o $@
 
 ../../object/%.o: %.c
-	$(CC) $(CFLAGS_LOWER) $(TARGET_CC) $(INC) -c $< -o $@
+	$(CC) $(CFLAGS_LOWER) $(TARGET_CC) $(INC) -c $< -o $@ -lasm
 
 
 clean : 
