Change working directory to algorithm/kaml

--- a/algorithm/kaml/Makefile
+++ b/algorithm/kaml/Makefile
@@ -1,6 +1,10 @@
 SRCS +=\
 	   normal.c\
 	   sha256.c\
+	   pftl.c\
+	   heap.c\
+	   Queue.c\
+	   gc.c\
 
 OBJS :=\
 	$(patsubst %.c,%.o,$(SRCS))\
